<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/title_buttons"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/desc_buttons"
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnDemo"
        android:text="@string/btn_demo"
        android:minHeight="48dp"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/imgButton"
        android:src="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/img_btn_cd"
        android:layout_marginTop="12dp"
        android:layout_width="64dp"
        android:layout_height="64dp" />
</LinearLayout>
